# Lamp-Da

./: .clang-format  .gitignore  .gitmodules  .pre-commit  00__intro__mode_8hpp.html  00__intro__mode_8hpp_source.html  Adafruit__LittleFS_8h.html  Adafruit__LittleFS_8h_source.html  Adafruit__NeoPixel_8h.html  Adafruit__NeoPixel_8h_source.html  BQ25713_8h.html  BQ25713_8h_source.html  BQ25713__mock_8h.html  BQ25713__mock_8h_source.html  BQ76905_8h.html  BQ76905_8h_source.html  BQ76905__mock_8h.html  BQ76905__mock_8h_source.html  Contributing.md  FUSB302_8h_source.html  InternalFileSystem_8h.html  InternalFileSystem_8h_source.html  LICENSE  LSM6DS3_8h_source.html  LampColorControler.ino  Makefile  MicroPhone.cpp  MicroPhone.h  Notes.md  README.md  Vagrantfile  VirtualMachine.md  alerts_8h.html  alerts_8h_source.html  animations.cpp  animations.h  annotated.html  arduinoFFT_8h_source.html  assert_8h.html  assert_8h_source.html  (+1454 more)
docs/: MemoryUsage.md  Notes.md  QuickSetup.md  Thanks.md  Update.md  WritingModes.md  index.html
electrical/: BOM_Lampda-micro_v1.csv  BOM_Lampda_2024-07-19.csv  BOM_Lampda_V1_1.csv  BOM_Lampda_v1.csv  PickAndPlace_Lampda_PCB_V1_1.csv  PickAndPlace_PCB_Lampda-v1.csv  PickAndPlace_PCB_Lampda_2024-07-19.csv  PickAndPlace_PCB_Lampda_v1.csv  README.md
flashInfo/: README.md  lampda_nrf52840_bootloader-0.9.2-dirty_nosd.hex  openocd.cfg  update-lampda_nrf52840_bootloader-0.9.2-dirty_nosd.uf2
html/: 00__intro__mode_8hpp_source.html  alerts_8h_source.html  assert_8h_source.html  brightness__handle_8h_source.html  classArduinoFFT-members.html  classCEveryNMillis.html  classDigitalPin-members.html  classDigitalPinImpl.html  classStateMachine-members.html  classalerts_1_1AlertManager__t.html  classbq76905_1_1BQ76905-members.html  classbq76905_1_1BQ76905.html  classcurves_1_1ExponentialCurve-members.html  classutils_1_1ColorSpace_1_1HSV-members.html  classutils_1_1ColorSpace_1_1OKLAB-members.html  classutils_1_1ColorSpace_1_1OKLCH-members.html  (+207 more)
tests/: CMakeLists.txt  Makefile
tests/itest/: CMakeLists.txt
tests/itest/src/: button.test.cpp  main.test.cpp
tests/utest/: CMakeLists.txt
tests/utest/src/: color_utils.test.cpp  curves.test.cpp  elk_decoder.test.cpp  fft.test.cpp  queue.test.cpp  utils.test.cpp  vector_math.test.cpp
(+648 files in other folders)
